Run eslint --fix

--- a/examples/simple-html/index.html
+++ b/examples/simple-html/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id='app'></div>
     <script>
-        var map = new gisida.Dashboard({})
+        var dashboard = new gisida.Dashboard({})
     </script>
 </body>
 
