--- a/examples/simple-html/index.html
+++ b/examples/simple-html/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset='utf-8' />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Gisida Dashboard</title>
 
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.38.0/mapbox-gl.js'></script>
