RW: placeholder index foundation css

--- a/index.html
+++ b/index.html
@@ -1,3 +1,40 @@
-<html>
-index page
+<!doctype html>
+<html class="no-js" lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gisida Mapping Visualization Library</title>
+    <link rel="stylesheet" href="resources/css/foundation.css">
+    <link rel="stylesheet" href="resources/css/style.css">
+  </head>
+  <body>
+    <div class="grid-container">
+      <div class="grid-x grid-padding-x">
+        <div class="large-12 cell">
+          <img src="resources/img/gisida-logo.png" width="140px" style="padding-bottom:40px;"><br>
+          <img src="resources/img/gisida-logotype.png" width="260px">
+          <h3>Map visualizations from MapSpec using Mapbox GL JS</h3>
+        </div>
+      </div>
+
+      <div class="grid-x grid-padding-x">
+        <div class="large-12 cell">
+          <div>
+            <p>A Javascript library that creates map visualizations from MapSpec using Mapbox GL JS.</p>
+            <p>Example sites</p>
+            <p>How to / setting up</p>
+            <p>Email us box</p>
+          </div>
+        </div>
+      </div>
+
+
+        </div>
+
+        
+      </div>
+    </div>
+
+  </body>
 </html>
