MB: initial text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
           <div>
-            <p>A Javascript library that creates map visualizations from MapSpec using Mapbox GL JS.</p>
+            <p>Gisida is a javascript library that makes it easy to create beautiful map visualizations from data represented in a standardized way. Gisida extends <a href="https://www.mapbox.com/mapbox-gl-js/style-spec/">Mapbox Style Specification</a> to use simplify the process of creating popular map visualizations like choropleth with autobreaks with support for csv data joins, timeseries support, etc. 
+            </p>
+
             <p>Example sites</p>
             <p>How to / setting up</p>
             <p>Email us box</p>
