RW: changing copyright

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="copyright">
               <small>
-                &copy; 2014, Nick Salloum<br><a href="http://callmenick.com">callmenick.com</a>
+                &copy; 2017, Ona<br><a href="http://ona.io">ona.io</a>
               </small>
             </div>
           </div>
