RW: update images and style

--- a/index.html
+++ b/index.html
@@ -24,10 +24,30 @@
             
             <section class="module parallax parallax-1">
               <div class="container">
-                <img src="resources/img/gisida-logo.png" class="center" width="20%" style="padding-bottom:2em;">
-                <img src="resources/img/gisida-logotype.png" class="center" width="26%">
-                <h2 class="center">Map visualizations from MapSpec using Mapbox GL JS</h2>
+                <img src="resources/img/gisida-logo.png" class="center" width="17%" style="padding-bottom:2em;">
+                <img src="resources/img/gisida-logotype.png" class="center" width="26%" style="padding-bottom:3em;">
+                <h2 class="center">Map visualizations from<br> MapSpec using Mapbox GL JS</h2>
                 <p>Gisida is a javascript library that makes it easy to create beautiful map visualizations from data represented in a standardized way. Gisida extends Mapbox Style Specification to use simplify the process of creating popular map visualizations like choropleth with autobreaks with support for csv data joins, timeseries support, etc.</p>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <p>hello</p>
+                <h2>Examples</h2>
+                <p>Lorem ipsum
+                </p>
+                <p>
+                  <img src="resources/img/screencapture-somreport-onalabs-org-1508463179742.png" style="width: 100%;">
+                </p>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
               </div>
             </section>
 
