RW; clean up content

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 <br>
                 <br>
                 <br>
-                <p>hello</p>
                 <h2>Examples</h2>
                 <p>Lorem ipsum
                 </p>
@@ -54,7 +53,7 @@
             <section class="module content">
               <div class="container">
                 <h2>What is it</h2>
-                <p>Gisida is a javascript library that makes it easy to create beautiful map visualizations from data represented in a standardized way. Gisida extends Mapbox Style Specification to use simplify the process of creating popular map visualizations like choropleth with autobreaks with support for csv data joins, timeseries support, etc.</p>
+                <p>Lorem ipsum</p>
               </div>
             </section>
 
@@ -67,7 +66,7 @@
             <section class="module content">
               <div class="container">
                 <h2>Example sites</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil consequuntur, nesciunt dicta, esse rem ducimus itaque quis. Adipisci ullam nam qui illum debitis sit ad in delectus, repudiandae non dolorum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit veritatis, facere aliquid itaque tempore consequatur nihil sint enim aliquam id saepe magnam totam repellat placeat a fugit nulla molestias voluptas.</p>
+                <p>Lorem ipsum.</p>
               </div>
             </section>
 
@@ -80,7 +79,7 @@
             <section class="module content">
               <div class="container">
                 <h2>How to / setting up</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil consequuntur, nesciunt dicta, esse rem ducimus itaque quis. Adipisci ullam nam qui illum debitis sit ad in delectus, repudiandae non dolorum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit veritatis, facere aliquid itaque tempore consequatur nihil sint enim aliquam id saepe magnam totam repellat placeat a fugit nulla molestias voluptas.</p>
+                <p>Lorem ipsum</p>
               </div>
             </section>
 
@@ -89,7 +88,7 @@
         <footer>
           <div class="container">
             <div class="asides clearfix">
-                <img alt="Tutorials, Snippets, Resources, and Articles for Web Design and Web Development" onerror="this.src=logo-alt.png" src="resources/img/gisida-logo.png" width="80px;">
+                <img src="resources/img/gisida-logo.png" width="80px;">
             </div>
             <div class="copyright">
               <small>
