MB: update text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
   <meta content="width=device-width,initial-scale=1.0" name="viewport">
     <title>Gisida Mapping Visualization Library</title>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="resources/css/base.css">
     <link rel="stylesheet" href="resources/css/style.css">
     <script src="resources/js/modernizr.js"></script>
@@ -26,10 +26,12 @@
               <div class="container">
                 <img src="resources/img/gisida-logo.png" class="center" width="17%" style="padding-bottom:2em;">
                 <img src="resources/img/gisida-logotype.png" class="center" width="26%" style="padding-bottom:3em;">
-                <h2 class="center">Map visualizations from<br> MapSpec using Mapbox GL JS</h2>
-                <p>Gisida is a javascript library that makes it easy to create beautiful map visualizations from data represented in a standardized way. Gisida extends Mapbox Style Specification to use simplify the process of creating popular map visualizations like choropleth with autobreaks with support for csv data joins, timeseries support, etc.</p>
-                <br>
-                <br>
+                <h2 class="center">Define beatiful map visualizations with MapViz spec <br>and render with Mapbox GL JS.</h2>.
+                <p><a href="">MapViz</a> spec provides an easy, <a href="https://en.wikipedia.org/wiki/Declarative_programming">declarative</a> approach to define common data map visualizations such as choropleth maps using just JSON (no JavaScript skills required). MapViz was designed to support the way most people work with data.  MapViz, for example, enables you to join CSV data to admin boundaries in vector tiles or geosjon files, do data aggregations and visualize data over a timeseries.
+                  
+                  Gisida  
+                  MapViz was designed to support the way most people work with data. This includes enabling joining of CSV data to admin boundaries in vector tiles, aggregating data and creating time series vizualizations.  Gisida is a JavaScript/React framework that converts MapViz layers to beautiful, interactive maps using Mapbox GL JS. MapViz is an extension of the <a href="https://www.mapbox.com/mapbox-gl-js/style-spec/">Mapbox Style Spec</a> with which it aims to remain compatible.
+          
                 <br>
                 <br>
                 <br>
@@ -39,7 +41,7 @@
                 <p>Lorem ipsum
                 </p>
                 <p>
-                  <img src="resources/img/screencapture-somreport-onalabs-org-1508463179742.png" style="width: 100%;">
+                  <img src="resources/img/gisida-1.png" style="width: 100%;">
                 </p>
                 <br>
                 <br>
