MB: change graphic

--- a/index.html
+++ b/index.html
@@ -33,15 +33,10 @@
           
             
                 <br>
-                <br>
-                <h2>Examples</h2>
-                <p>Lorem ipsum
-                </p>
+                <h2>MapViz Spec</h2>
                 <p>
-                  <img src="resources/img/gisida-1.png" style="width: 100%;">
+                  <img src="resources/img/mapviz.png" style="width: 100%;">
                 </p>
-                <br>
-                <br>
                 <br>
                 <br>
                 <br>
