Add how to set up images

--- a/index.html
+++ b/index.html
@@ -72,8 +72,18 @@
 
             <section class="module content">
               <div class="container">
-                <h2>How to / setting up</h2>
-                <p>Lorem ipsum</p>
+                <h2>How to Set Up</h2>
+                <ul>
+                  <li><p>1. Setup index.html and include gisida.js script</p></li>
+                  <img src="resources/img/structure.png" style="width: 60%;">
+                  <br/>
+                  <li><p>2. Set up config file</p></li>
+                  <img src="resources/img/appconfig.png" style="width: 100%;">
+                  <li>
+                    <p>3. Deploy</p>
+                  </li>
+                 
+                </ul>
               </div>
             </section>
 
